# db2024

./: .clang-format  .gitignore  CMakeLists.txt  remove_namespace.pl
benchmark/: CMakeLists.txt  aggregate_hash_table_performance_test.cpp
docker/: Dockerfile
src/: CMakeLists.txt  defs.h  errors.h  portal.h  record_printer.h  rmdb.cpp  unit_test.cpp
src/analyze/: CMakeLists.txt  analyze.cpp  analyze.h
src/binder/: CMakeLists.txt  bind_create.cpp  bind_drop.cpp  bind_insert.cpp  bind_select.cpp  bind_variable.cpp  binder.cpp  binder.h  bound_expression.h  bound_order_by.h  bound_statement.cpp  bound_statement.h  bound_table_ref.h  fmt_impl.cpp  keyword_helper.cpp  keyword_helper.h  node_tag_to_string.cpp  simplified_token.h  tokens.h  transformer.cpp
src/binder/expressions/: bound_agg_call.h  bound_alias.h  bound_binary_op.h  bound_column_ref.h  bound_constant.h  bound_star.h  bound_unary_op.h
src/binder/statement/: CMakeLists.txt  create_statement.cpp  create_statement.h  delete_statement.cpp  delete_statement.h  drop_statement.cpp  drop_statement.h  explain_statement.cpp  explain_statement.h  index_statement.cpp  index_statement.h  insert_statement.cpp  insert_statement.h  select_statement.cpp  select_statement.h  set_show_statement.h  update_statement.cpp  update_statement.h
src/binder/table_ref/: bound_base_table_ref.h  bound_cross_product_ref.h  bound_cte_ref.h  bound_expression_list_ref.h  bound_join_ref.h  bound_subquery_ref.h
src/common/: CMakeLists.txt  common.h  config.cpp  config.h  context.h  err_message.h  exception.h  hash_util.h  logger.h  macros.h  remove_namespace.pl  rid.h  rmdb_instance.cpp  rmdb_instance.h  rwlatch.h  string_util.h
src/common/enums/: statement_type.h
src/common/util/: hash_util.h  string_util.cpp  string_util.h
src/execution/: CMakeLists.txt  execution_manager.cpp  execution_manager.h  execution_sort.cpp  execution_sort.h  executor_abstract.h  executor_delete.cpp  executor_delete.h  executor_index_scan.cpp  executor_index_scan.h  executor_insert.cpp  executor_insert.h  executor_nestedloop_join.cpp  executor_nestedloop_join.h  executor_projection.cpp  executor_projection.h  executor_seq_scan.cpp  executor_seq_scan.h  executor_update.cpp  executor_update.h
src/index/: CMakeLists.txt  ix_defs.h  ix_index_handle.cpp  ix_index_handle.h  ix_manager.h  ix_scan.cpp  ix_scan.h
src/observer/: CMakeLists.txt
src/optimizer/: CMakeLists.txt  optimizer.h  plan.h  planner.cpp  planner.h
src/parser/: CMakeLists.txt  ast.h  ast_printer.h  gen_parser.sh  parse_node.h  test_parser.cpp  yacc.tab.cpp  yacc.tab.hpp  yacc.y
src/record/: bitmap.h  rm.h  rm_defs.h  rm_file_handle.cpp  rm_file_handle.h  rm_manager.h  rm_scan.cpp  rm_scan.h
src/recovery/: log_defs.h  log_manager.cpp  log_manager.h  log_recovery.cpp  log_recovery.h
src/replacer/: lru_replacer.cpp  lru_replacer.h  replacer.h
src/storage/: CMakeLists.txt  buffer_pool_manager.cpp  buffer_pool_manager.h  disk_manager.cpp  disk_manager.h  page.h
src/system/: CMakeLists.txt  col_meta.h  column.cpp  column.h  schema.cpp  schema.h  sm_defs.h  sm_manager.cpp  sm_manager.h  sm_meta.h
src/test/: CMakeLists.txt  binder_test.cpp  buffer_pool_manager_test.cpp  create_table_test.cpp  create_table_test2.cpp  disk_manager_test.cpp  err_msg_test.cpp  fmt_test.cpp  lru_replacer_test.cpp  normalize.cpp  pg_query_test.cpp
src/transaction/: transaction.h  transaction_manager.cpp  transaction_manager.h  txn_defs.h
src/transaction/concurrency/: lock_manager.cpp  lock_manager.h
src/type/: CMakeLists.txt  abstract_pool.h  bigint_type.cpp  bigint_type.h  boolean_type.cpp  boolean_type.h  decimal_type.cpp  decimal_type.h  integer_parent_type.cpp  integer_parent_type.h  integer_type.cpp  integer_type.h  limits.h  numeric_type.h  smallint_type.cpp  smallint_type.h  timestamp_type.cpp  timestamp_type.h  tinyint_type.cpp  tinyint_type.h  type.cpp  type.h  type_id.h  type_util.h  value.cpp  value.h  value_factory.h  varlen_type.cpp  varlen_type.h
unittest/: CMakeLists.txt
unittest/common/: CMakeLists.txt
unittest/memtracer/: CMakeLists.txt
unittest/observer/: CMakeLists.txt
